[tool.poetry]
name = "clearbot"
version = "0.1.1"
description = "Clearbit Logo API client"
authors = ["Alban Siffer <alban.siffer@irisa.fr>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "clearbot.py" }]

[tool.poetry.scripts]
clearbot = "clearbot:cli"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"
tqdm = "^4.64.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
